--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,14 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.3.0"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.3.0",
+    "nodemailer": "^7.0.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
