--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
     "framer-motion": "^12.23.19",
     "gh-pages": "^6.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.64.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3"
   },
@@ -36,4 +38,3 @@
     "vite": "^7.1.7"
   }
 }
-
