--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "expo": "^54.0.13",
     "framer-motion": "^12.23.19",
     "gh-pages": "^6.3.0",
     "react": "^19.1.1",
