--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "vite": "^7.1.7"
+  },
+  "server": {
+    "port": 5000,
+    "host": "0.0.0.0"
   }
 }
